project-gitops/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cicdmeta-demo2-base
  namespace: cicdmeta
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cicdmeta-demo2
  template:
    metadata:
      labels:
        app: cicdmeta-demo2
        version: base
    spec:
      containers:
      - name: cicdmeta-demo2-container
        image: cicdmeta-demo2
        resources:
          requests:
            cpu: "1000m"
            memory: "2Gi"
          limits:
            cpu: "2000m"
            memory: "4Gi"
        ports:
        - containerPort: 8000
