project-gitops/service-feat1.yaml
apiVersion: v1
kind: Service
metadata:
  name: cicdmeta-demo3-service-feat1
  namespace: cicdmeta
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: cicdmeta-demo3
