project-gitops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cicdmeta-demo4-service
  namespace: cicdmeta
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: cicdmeta-demo4
