project-gitops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cicdmeta-demo3-ingress
  namespace: cicdmeta
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/group.name: global-infra
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
spec:
  rules:
  - host: demo2.cicdmeta.zilliz.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cicdmeta-demo3-service
            port:
              number: 8000
